# camelus

./: CMakeLists.txt  README.md
demo/: peakList  x_obs
param/: DEFAULThmParam.par  cosmoParam.par  hmParam.par  hmParam_02_04.par  hmParam_04_06.par  hmParam_06_08.par  hmParam_08_10.par  hmParam_10_12.par  hmParam_coupon_z02z04.par  hmParam_leauthaud11.par  hmparam_coupon15  peakParam.par
python/: ApplyBias.py  Nz.py  Nz_galonly.py  Nz_precomputed.py  PopulateGalaxies.py  cutoff.py  cutoff_nz.py  fig_plot.py
source/: ABC.c  ABC.h  FITSFunctions.c  FITSFunctions.h  HEALPixFunctions.c  HEALPixFunctions.h  commonHeader.c  commonHeader.h  constraint.c  constraint.h  galaxySampling.c  galaxySampling.h  haloSampling.c  haloSampling.h  main.c  main.h  multiscale.c  multiscale.h  parameters.c  parameters.h  peakParameters.c  peakParameters.h  peakSelection.c  peakSelection.h  rayTracing.c  rayTracing.h  smoothing.c  smoothing.h  wrapper.cpp  wrapper.h
